Remove securities
